--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,69 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         qt: [5.15.2, 6.9.0]
 
 # =================================
 
     runs-on: ${{ matrix.os }}
+    container: ${{ matrix.os == 'ubuntu-latest' && 'ubuntu:20.04' || '' }}
 
     steps:
+    - name: Install Ubuntu dependencies
+      if: runner.os == 'Linux'
+      run: |
+        export DEBIAN_FRONTEND=noninteractive
+        apt-get update
+        apt-get install -y \
+          build-essential \
+          cmake \
+          git \
+          jq \
+          libasound2 \
+          libcups2 \
+          libcurl4-openssl-dev \
+          libfontconfig1-dev \
+          libfreetype6-dev \
+          libfuse2 \
+          libgstreamer-gl1.0-0 \
+          libx11-dev \
+          libx11-xcb-dev \
+          libxcb-cursor0 \
+          libxcb-glx0-dev \
+          libxcb-icccm4-dev \
+          libxcb-image0-dev \
+          libxcb-keysyms1-dev \
+          libxcb-randr0-dev \
+          libxcb-render-util0-dev \
+          libxcb-shape0-dev \
+          libxcb-shm0-dev \
+          libxcb-sync0-dev \
+          libxcb-xfixes0-dev \
+          libxcb1-dev \
+          libxext-dev \
+          libxfixes-dev \
+          libxi-dev \
+          libxkbcommon-dev \
+          libxkbcommon-x11-dev \
+          libxrandr2 \
+          libxrender-dev \
+          ninja-build \
+          sudo \
+          wget
+
+    - name: Install Ubuntu Python
+      if: runner.os == 'Linux'
+      run: |
+        apt-get install -y software-properties-common
+        add-apt-repository ppa:deadsnakes/ppa
+        apt-get update
+        apt-get install -y curl python3.10
+        ln -sf /usr/bin/python3.10 /usr/bin/python3
+        curl -sS https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+        python3 get-pip.py
+        python3 -m pip install --no-cache-dir --upgrade pip setuptools wheel
+
     - uses: actions/checkout@v4
       with:
         submodules: recursive
@@ -55,6 +110,7 @@ jobs:
         cache: true
         aqtversion: ==3.2.*
         modules: ${{ startsWith(matrix.qt, '6') && 'qtmultimedia qtimageformats debug_info' || 'debug_info' }}
+        setup-python: ${{ matrix.os == 'ubuntu-latest' && 'false' || 'true' }}
 
     - name: ccache
       uses: hendrikmuhs/ccache-action@v1.2
@@ -66,7 +122,6 @@ jobs:
     - name: Compile Sentry SDK
       if: runner.os == 'Linux'
       run: |
-        sudo apt install libcurl4-openssl-dev
         git clone --recursive https://github.com/getsentry/sentry-native.git
         mkdir -p sentry-native/build
         cd sentry-native/build
@@ -77,7 +132,6 @@ jobs:
     - name: Build Ubuntu
       if: runner.os == 'Linux'
       run: |
-        sudo apt install libgstreamer-gl1.0-0 libfuse2 libfontconfig1-dev libfreetype6-dev libx11-dev libx11-xcb-dev libxext-dev libxfixes-dev libxi-dev libxrender-dev libxcb1-dev libxcb-glx0-dev libxcb-keysyms1-dev libxcb-image0-dev libxcb-shm0-dev libxcb-icccm4-dev libxcb-sync0-dev libxcb-xfixes0-dev libxcb-shape0-dev libxcb-randr0-dev libxcb-render-util0-dev libxkbcommon-dev libxkbcommon-x11-dev
         mkdir build
         cd build
         qmake ../WPanda.pro
@@ -103,7 +157,8 @@ jobs:
         cp thirdparty/sentry/lib/libsentry.so appimage/lib/
         wget https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
         chmod +x ./linuxdeployqt-continuous-x86_64.AppImage
-        VERSION=$VERSION ./linuxdeployqt-continuous-x86_64.AppImage appimage/wiredpanda -appimage
+        ./linuxdeployqt-continuous-x86_64.AppImage --appimage-extract
+        VERSION=$VERSION ./squashfs-root/usr/bin/linuxdeployqt ./appimage/wiredpanda -appimage
         rm ./linuxdeployqt-continuous-x86_64.AppImage
         mv wiRedPanda-$VERSION-x86_64.AppImage wiRedPanda-$VERSION-Ubuntu-Qt${{ matrix.qt }}.AppImage
 
@@ -112,6 +167,7 @@ jobs:
       env:
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
       run: |
+        git config --global --add safe.directory '*'
         sentry-cli login --auth-token "$SENTRY_AUTH_TOKEN"
         sentry-cli releases new "wiredpanda@$VERSION" -p wiredpanda
         sentry-cli debug-files upload --include-sources -p wiredpanda build/app/
